maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: ';' expected but 'else' found.
  while (!estSurBiscuit()) {setDirection(Direction.NORTH); while(!estFaceMur) {avance()} else {keepHandOnSideWall}}; prendBiscuit()
                                                                                         ^